--- a/src/index.html
+++ b/src/index.html
@@ -91,12 +91,12 @@
                             </div>
                             <div class="col-6 flex">
                                 <!--slideshow-->
-                                <div class="slider-dots">
+                                <!-- <div class="slider-dots">
                                     <ol>
                                         <li class="active"></li>
                                         <li></li>
                                     </ol>
-                                </div>
+                                </div> -->
                                 <div class="slider">
                                     <div class="slide-width">
                                         <div class="slide-item">
